--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
           src="images/illustration-woman-online-mobile.svg"
           alt="Illustration-woman"
         />
+        <img
+          class="header__img-desktop"
+          src="images/illustration-woman-online-desktop.svg"
+          alt="Illustration-woman"
+        />
+        <img class="header__img-box" src="./images/illustration-box-desktop.svg" alt="illustration box">
         <div class="header__img--shadow"></div>
       </section>
 
